--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="c-title nunito-title">
         <h1>Chicken Machine</h1>
-        <img class="c-title-img" src="ChickenGPT.png"/>
+        <img class="c-title-img" src="ChickenGPT-600.png"/>
     </div>
     <div class="displayArea">
         <div id="buttons" class="c-button-area"></div>
